Make root index show full page instead of redirect

--- a/index.html
+++ b/index.html
@@ -1,12 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="refresh" content="0; url=page/ayesh.html">
-<title>Redirecting...</title>
-<script>window.location.href = "page/ayesh.html";</script>
+  <title>❤️</title>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background: black;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: center;
+    }
+    .msg {
+      font-size: 40px;
+      opacity: 0;
+      animation: fadeIn 3s ease forwards;
+      z-index: 2;
+    }
+    @keyframes fadeIn {
+      to { opacity: 1; }
+    }
+    .heart {
+      position: absolute;
+      bottom: -20px;
+      font-size: 16px;
+      color: #ff4d6d;
+      animation: floatUp 6s linear infinite;
+      opacity: 0.8;
+    }
+    @keyframes floatUp {
+      0% { transform: translateY(0); opacity: 0; }
+      10% { opacity: 1; }
+      100% { transform: translateY(-110vh); opacity: 0; }
+    }
+    .play-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.85);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 100;
+      cursor: pointer;
+    }
+    .play-overlay.hidden { display: none; }
+    .play-btn {
+      padding: 16px 32px;
+      font-size: 20px;
+      background: #ff4d6d;
+      color: white;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+    }
+    .play-btn:hover { background: #ff6b8a; }
+  </style>
 </head>
 <body>
-<p>Redirecting to <a href="page/ayesh.html">ayesh.html</a>...</p>
+
+<div class="play-overlay" id="playOverlay">
+  <button class="play-btn" id="playBtn">🎵 Click to play music</button>
+</div>
+
+<div class="msg">
+  I love you, Daood<br>
+  you are the best thing of my life 💖💖
+</div>
+
+<audio id="bgAudio" loop>
+  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_2f6fdfc3f5.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+  const audio = document.getElementById("bgAudio");
+  const overlay = document.getElementById("playOverlay");
+  function startMusic() {
+    audio.play().catch(function() {});
+    overlay.classList.add("hidden");
+  }
+  document.getElementById("playBtn").addEventListener("click", startMusic);
+  overlay.addEventListener("click", startMusic);
+
+  function createHeart() {
+    const heart = document.createElement("div");
+    heart.className = "heart";
+    heart.innerHTML = "💖";
+    heart.style.left = Math.random() * 100 + "vw";
+    heart.style.animationDuration = (4 + Math.random() * 3) + "s";
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 7000);
+  }
+  setInterval(createHeart, 500);
+</script>
+
 </body>
 </html>
